--- a/coltermay.com/sass/_mixins.scss
+++ b/coltermay.com/sass/_mixins.scss
@@ -29,6 +29,13 @@
     justify-content: space-evenly;
     align-items: center;   
     text-align: center; 
+    text-align: left;
+    color: $color-grey-dark;
+
+    span {
+        color: $color-grey-light;
+    }
+
 }
 @mixin formInput {
     transform: translateY(-20px);
@@ -78,4 +85,25 @@
       $color-black 65%,
       $color-primary 20%,
       $color-primary 50%);  
+}
+
+@mixin h2 {
+    position: absolute;
+    text-transform: uppercase;
+    color: $color-primary;
+    font-size: 2.2em;
+    font-weight: 400;
+    letter-spacing: 3px;
+    padding: 0px 0 30px 98px;
+
+    &:before {
+        content: attr(data-text);
+        position: relative;
+        top: 0;
+        left: 0.6%;
+        color: darken($color-grey-darker, 10% );
+        pointer-events: none;
+
+    }
+    
 }
