--- a/coltermay.com/sass/_about.scss
+++ b/coltermay.com/sass/_about.scss
@@ -13,7 +13,7 @@
 
     &__text {
         width: 50%;
-        padding: 60px 40px 20px 10px;
+        padding: 60px 40px 20px 2px;
         line-height: 1.6;
         font-weight: 200;
         font-size: 1.1em;
@@ -85,9 +85,9 @@
 
 .timeline {
     position: relative;
-    max-width: 1200px;
+    max-width: 85rem;
     margin: 0 auto;
-    margin-top: -150px;
+    margin-top: 180px;
 
     &::after {
         content: '';
