--- a/coltermay.com/sass/_responsive.scss
+++ b/coltermay.com/sass/_responsive.scss
@@ -25,6 +25,28 @@ $bp-smallest: 31.25em; //500px/16
 
     }
 
+
+    //ABOUT 
+    .about__photo {
+        top: -64px;
+        left: 50px;
+    }
+    .about__text {
+        padding: 100px 0px 20px 11px;
+    }
+
+    .statement__content {
+        margin-top: 130px;
+    }
+    .statement__text {
+        margin-left: 200px;
+    }
+    .statement__img {
+        top: 100px;
+        left: 8%;
+        width: 40%;
+    }
+
     // CONTACT SECTION
     .contact__container {
         width: 90%;
@@ -37,15 +59,6 @@ $bp-smallest: 31.25em; //500px/16
         top: 0;
         height: 550px;
         box-shadow: none;
-
-    }
-    //ABOUT 
-    .about__photo {
-        top: -64px;
-        left: 50px;
-    }
-    .about__text {
-        padding: 100px 0px 20px 11px;
     }
 
 }
@@ -55,11 +68,28 @@ $bp-smallest: 31.25em; //500px/16
         height: 400px;
     }
 
+    .glide__slide--link {
+        padding: 9px 12px;
+        font-size: .7em;
+    }
+
     //ABBOUT 
     .about__photo {
         top: -92px;
         left: 45px;
     }
+
+    //ARTIST STATEMENT
+    .statement__box {
+        margin-top: -87px;
+    }
+    .statement__img {
+        width: 44%;
+    }
+   
+    // .statement__content {
+    //     margin-top: 130px;
+    // }
    
 
 }
@@ -106,10 +136,8 @@ $bp-smallest: 31.25em; //500px/16
         width: 60%;
     } 
 
-
-
     .glide__slide--link {
-        width: 150px;
+        // width: 150px;
     }
 
 
@@ -147,12 +175,6 @@ $bp-smallest: 31.25em; //500px/16
         box-shadow: 0 50px 50px rgba(0, 0, 0, 0.25);
     }
 
-  
-    // ARTIST STATEMENT
-    .artist__statement {
-        flex-direction: column;
-    }
-
     // ABOUT
     .about {
         flex-direction: column;
@@ -178,11 +200,6 @@ $bp-smallest: 31.25em; //500px/16
         }
     }
 
-    // .about__text {
-     
-    //     margin-left: 0;
-    //     align-items: flex-start;
-    // }
 
     .about__text {
         width: 84%;
@@ -231,13 +248,16 @@ $bp-smallest: 31.25em; //500px/16
     }
 
     // CURRICULUM VITAE
-    .mentors__box {
-        margin-top: 117px;
-    }
 
     .container {
         padding: 0;
         width: 49.5%;
+    }
+
+
+    // ARTIST STATEMENT
+    .artist__statement {
+        flex-direction: column;
     }
 
     .statement__text {
@@ -246,33 +266,36 @@ $bp-smallest: 31.25em; //500px/16
         margin: auto;
 
         &:first-child {
-            padding-top: 130px;
+            padding-top: 0;
 
         }
+    }
+    .statement__content {
+        margin-top: 145px;
     }
 
     .statement__img {
         top: 102px;
         left: 0;
-        width: 60%;
+        width: 70%;
+        margin: auto;
     }
 
     .blockquote::before {
-        top: 18%;
+        top: -33%;
         left: -4%;
     }
-
-
-    // CURRICULUM VITAE
-
-
-
+   
 }
 
 @media screen and (max-width: $bp-medium2) {
 
     .glide img {
         height: 300px;
+    }
+    .glide__slide--link {
+        padding: 9px 6px;
+        // font-size: .7em;
     }
 
     .popup__content {
@@ -293,42 +316,6 @@ $bp-smallest: 31.25em; //500px/16
 
     }
 
-    // .section__form {
-    //     @include mobileLinearGradient
-    // }
-
-    // .form__container {
-    //     display: flex;
-    //     flex-direction: column-reverse;
-    // }
-
-    // .contact__info {
-    //     width: 100%;
-    //     height: auto;
-    // }
-
-    // .contact__form {
-    //     position: relative;
-    //     width: 100%;
-    //     height: auto;
-    //     padding-left: 40px;
-    //     margin-left: 0;
-    // }
-
-    // .form__wraper {
-    //     margin-top: 100px;
-
-    // }
-
-    // .flex {
-    //     display: flex;
-    //     justify-content: space-between;
-    //     align-items: flex-start;
-    // }
-
-    // .contact__info--icons {
-    //     margin-top: -32px;
-    // }
 }
 
 @media screen and (max-width: $bp-small) {
@@ -367,9 +354,7 @@ $bp-smallest: 31.25em; //500px/16
 
 
     .glide__slide--link {
-        letter-spacing: 0;
-        padding: 12px 10px;
-        width: 109px;
+       display: none;
     }
 
     //GALLERY 
@@ -379,20 +364,78 @@ $bp-smallest: 31.25em; //500px/16
       }
 
     //ABOUT 
-    .about__text {
-        padding-top: 100px;
+    .about {
+        padding-bottom: 50px;
+
+        &__text {
+            padding-top: 100px;
+        }
+
+        &__name {
+            text-align: left;
+            margin-top: 50px;
+        }
+
+        &about__photo{
+            width: 75%;
+        }
     }
-    .about__name {
+   
+    //TIME LINE
+    .cv {
+        background: none;
+    }
+    .timeline::after {
+        left: 31px;
+     }
+
+     .container {
+        width: 100%;
+        padding-left: 35px;
+        padding-right: 25px;
+    }
+    .container::before {
+        left: 60px;
+        border: medium solid white;
+        border-width: 10px 10px 10px 0;
+        border-color: transparent white transparent transparent;
+    }
+
+    .left::after, .right::after {
+        left: 21px;
+    }
+
+    .right {
+        left: 0%;
+    }
+
+    .content h2 {
         text-align: left;
-        margin-top: 50px;
     }
-    .about__photo{
-        width: 75%;
+
+    .content h3 {
+        text-align: left;
     }
+
+    .content li {
+        direction:ltr;
+        text-align: left;
+    }
+    .timeline {
+        margin-top: 115px;
+    }
+
+    //ARTIST STATEMENT 
+    .statement__img {
+        top: 30px;
+    
+    }
+
 
     // CONTACT FORM
     .section__contact {
         background: $color-black;
+        padding-top: 20px;
     }
     .form__content {
         flex-direction: column;
@@ -422,8 +465,6 @@ $bp-smallest: 31.25em; //500px/16
         margin-top: 60px;
     }
 
-    
-
     .popup__img {
         width: 90%;
         margin: auto;
@@ -446,21 +487,6 @@ $bp-smallest: 31.25em; //500px/16
         margin-top: -145px;
     }
 
-    // .flex {
-    //     flex-direction: column;
-
-    // }
-
-    // .form_content {
-    //     width: 100%;
-    //     display: flex;
-    //     flex-direction: column;
-    // }
-
-    // .input__box.w50 {
-    //     width: 100%;
-    // }
-
     .heading__secondary {
         left: -13px;
     }
@@ -471,6 +497,23 @@ $bp-smallest: 31.25em; //500px/16
 
     .gallery__row {
         padding: 4px 32px;
+    }
+
+
+    .blockquote::before {
+        top: -15%;    
+    }
+    .statement__text:first-child {
+        padding-top: 16px;
+    }
+    .about__video {
+        margin-bottom: 50px;
+    }
+
+    .glide__slide--link {
+        padding: 8px 6px;
+        font-size: .8em;
+        width: 86%;
     }
 
 }
