--- a/coltermay.com/sass/_about.scss
+++ b/coltermay.com/sass/_about.scss
@@ -76,9 +76,15 @@
     width: 160px;
     margin-top: -35px;
 }
+
 /* **********  TIMELINE VERTICAL RULER ***********/
 .cv {
-    background-image: radial-gradient(rgba(0, 0, 0, 0.822) 15%, rgb(0, 0, 0) 65%, rgb(0, 0, 0) 85%, rgb(0, 0, 0) 50%, rgb(0, 0, 0) 100%), url(../img/mountain-min.jpg);
+    background-image: radial-gradient(rgba(0, 0, 0, 0.822) 15%, 
+                    rgb(0, 0, 0) 65%, 
+                    rgb(0, 0, 0) 85%, 
+                    rgb(0, 0, 0) 50%, 
+                    rgb(0, 0, 0) 100%), 
+                    url(../img/mountain-min.jpg);
     background-size: cover;
     background-repeat: none;
 }
@@ -157,9 +163,8 @@
 /* CONTENT */
 .content {
     padding: 20px 30px;
-    // background-color: $color-white; //for mobile version 
     position: relative;
-    border-radius: 6px;
+    // border-radius: 6px;
     font-weight: 300;
     color: $color-grey-light;
 
@@ -173,22 +178,9 @@
 
 }
 
-.mentors__box {
-    margin-left: 43px;
-    margin-top: 80px;
-    // overflow: hidden;
+.align-right {text-align: right;}
+.li-dots-right {direction: rtl; unicode-bidi: embed;}
 
-    & h2 {
-        color: $color-white;
-    }
-}
-
-.mentor {
-    color: $color-primary;
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 1px;
-}
 
 
 /* **********  ARTIST STATEMENT ***********/
