--- a/coltermay.com/sass/_navigation.scss
+++ b/coltermay.com/sass/_navigation.scss
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 80px;
+    padding: 27px;
     display: flex;
     @include navBg;
     overflow: hidden;
@@ -21,6 +21,19 @@
         color: $color-primary;
 
     }
+
+    & .logo__mobile {
+        display: none;
+
+        position: relative;
+        font-size: 1.7em;
+        text-decoration: none;
+        text-transform: uppercase;
+        letter-spacing: 1.3px;
+        font-weight: 700;
+        margin-left: 40px;
+        color: $color-primary;
+    }
 }
 
 .nav {
@@ -34,7 +47,6 @@
 
     &__link {
         position: relative;
-        // padding: 15px;
         display: inline-block;
         margin-right: 40px;
         text-decoration: none;
@@ -48,7 +60,6 @@
             content: '';
 		    width: 0;
 		    height: 2px;
-            // margin-top: 15px;
             margin-top: 30px;
 		    background-color: $color-primary;
 		    position: absolute;
@@ -95,46 +106,52 @@
     transition: background-color 1000ms ease-out;
     transition-delay: 125ms;
     z-index: 99;
-
- 
-
 }
 
+//MOBILE NAVIGATION
+//Menu Botton
+.menu__btn {
+    position: absolute;
+    height: 4.2rem;
+    width: 4.2rem;
+    border-radius: 50%;
+    right: 15px;
+    top: 10px;
+    cursor: pointer;
+    display: none;
+    z-index: 2;
 
+    .btn__line {
+        position: relative;
+        top: 37%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 2rem;
+        height: 1px;
+        margin: 0 0 6px 0;
+        background: $color-white;
+        transition: ease-out .3s;
+        // @include easeOut3s;
+    }
 
+    // Rotate Into X With Menu Lines
+    &.close {
+        transform: rotate(180deg);
+        .btn__line {
+            //line 1 - Rotate
+            &:nth-child(1) {
+                transform: rotate(45deg) translate(-5px, 14px);
+            }
+            //Line 2 - Hide 
+            &:nth-child(2) {
+                opacity: 0;
+            }
+            //Line 3 Rotate
+            &:nth-child(3) {
+                transform: rotate(-45deg) translate(-4px, -15px);
+            }
+        }
+    }
+}
 
-
-
-
-
-
-
-
-// .scroll {
-//     position: absolute;
-//     top: 80%;
-//     left: 94%;
-//     transform: translate(0, 0) rotate(270deg);
-
-//     & p {
-//         font-weight: 300;
-//         color: $color-primary;
-//         text-transform: uppercase;
-//         font-size: 13px;
-//         letter-spacing: 7px;
-//     }
-
-//     &::after {
-//         content:'';
-//         position: absolute;
-//         bottom: 40%;
-//         left: -60%;
-//         width: 40px;
-//         height: 1px;
-//         background-color: $color-primary;
-//         // transform: translate(30px, 20px) rotate(177deg);
-//     }
-
-
-// }
 
